Styles para la página de registro de usuario

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -12,24 +12,22 @@
                 <table>
                     <tr>
                         <th>
-                            <label><b>Nombre de usuario</b></label>
+                            <label><p>Nombre de usuario</p></label>
                         </th>
                         <th>
                             <input type="text" placeholder="Digita tu nombre de usuario" name="userName" required>
-
                         </th>
                     </tr>
                     <tr>
                         <th>
-                            <label><b>Contraseña</b></label>
+                            <label><p>Contraseña</p></label>
                         </th>
                         <th>
                             <input type="password" placeholder="Digita la contraseña" name="pass" required>
                         </th>
                     </tr>
-
                 </table>
-                <button type="submit">Login</button>
+                <button type="submit" style="background-color: #4CAF50; color: white; padding: 15px 32px;text-align: center; font-size: 16px">Login</button>
             </div>
         </fieldset>
     </form>
