--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,8 +5,9 @@
 <html>
     <head>
         <title>@title</title>
+        <link rel="stylesheet" href="assets/styles.css">
     </head>
-    <body>
+    <body style="background-color:#313943;">
         @content
     </body>
 </html>
